--- a/.github/workflows/update-subtree.yml
+++ b/.github/workflows/update-subtree.yml
@@ -48,8 +48,5 @@ jobs:
       # Push changes directly
       - name: Push changes
         run: |
-          if [ -n "$(git status --porcelain)" ] || ! git diff --quiet HEAD; then
-            git push
-          else
-            echo "No changes to push"
-          fi
+          # Push only if there are changes
+          git push
