--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -50,5 +50,9 @@ jobs:
       - name: Commit and push changes
         run: |
           git add .
-          git commit -m "Update test-submodule to latest version"
-          git push
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Update test-submodule to latest version"
+            git push
+          fi
